# keymash-detector

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
keymash-detector-bot/: Cargo.toml
keymash-detector-bot/src/: .gitignore  lib.rs  main.rs
keymash-detector-core/: Cargo.toml
keymash-detector-core/.cargo/: config.toml
keymash-detector-core/src/: lib.rs  main.rs
keymash-detector-core/tests/: tests.rs
keymash-detector-firebot-custom-script/: package-lock.json  package.json  tsconfig.json  webpack.config.js
keymash-detector-firebot-custom-script/core/: Cargo.toml
keymash-detector-firebot-custom-script/core/.cargo/: config.toml
keymash-detector-firebot-custom-script/core/src/: lib.rs
keymash-detector-firebot-custom-script/src/: main.ts
keymash-detector-firebot-custom-script/tests/: main.test.ts
src/: data.rs  lib.rs  main.rs
tests/: tests.rs
