[package]
name = "keymash-detector"
version = "0.1.0"
edition = "2024"

[dependencies]
dfdx = "0.13.0"
autograd = "2.0.0-rc3"
xsf = "0.3.5"
wolfe_bfgs = "0.1.6"
ndarray = "0.16.1"
bytemuck = { version = "1.24.0", features = [
    "min_const_generics",
    "must_cast",
] }
log = "*"

[dev-dependencies]
env_logger = "0.11.8"
