[package]
name = "keymash-detector-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
keymash-detector-core = { path = "../keymash-detector-core" }
twitch_highway = { version = "0.3.2", features = [
    "eventsub",
    "websocket",
    "websocket-client",
    "websocket-router",
    "users",
    "chat",
] }
twitch_oauth_token = "3.0.0"
asknothingx2-util = "*"
tokio = { version = "*" }
serde = "*"
tracing = "*"
reqwest = "*"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.9.8"
