[package]
name = "keymash-detector-core"
version = "0.1.0"
edition = "2024"

[dependencies]
dfdx-core = { git = "https://github.com/HMPerson1/dfdx.git", rev = "cb9242673a53254392533b4c4fda8e99031a967f", default-features = false }
errorfunctions = "0.2.0"
wolfe_bfgs = "0.1.6"
ndarray = "0.16.1"
bytemuck = { version = "1.24.0", features = [
    "min_const_generics",
    "must_cast",
] }
log = "*"

[dev-dependencies]
env_logger = "0.11.8"
